# functional-programming

p0/: CHANGELOG.md  p0.cabal
p0/src/: MyLib.hs
p0/test/: Main.hs
p01/: p01.cabal
p01/src/: MyLib.hs
p01/test/: Main.hs
